--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body style="font-family:Verdana;">
 
 <div style="background-color:#f1f1f1;padding:15px;">
-  <h1>Cinque Terre</h1>
+  <h1>Hello, website</h1>
   <h3>Resize the browser window</h3>
 </div>
 
